<resources>
    <string name="app_name">LeloCab</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="android_api_key">AIzaSyC02xseYYm5WScgpN8r0qAqfLmtJ4ZG9fs</string>

    <string name="location_rationale">Accept</string>
    <string name="location_deny_dialog">Deny String</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="next">Next</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="book_ride">Book Ride</string>
    <string name="book_now">Book Now</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="finish">Finish</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="book_later">Book Later</string>

    <!--navigation screen-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_rides">Your Rides</string>
    <string name="bill_details">Bill Details</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="other_charges">Other Charges</string>
    <string name="total_bill">Total Bill</string>
    <string name="contact_number_validation">Please enter contact number to continue</string>
    <string name="correct_contact_number_validation">Please enter correct contact number to continue</string>
    <string name="password_validation">Please enter password to continue</string>
    <string name="name_validation">Please enter name to continue</string>
    <string name="email_validation">Please enter email to continue</string>
    <string name="confirm_password_validation">Please enter confirm password to continue</string>
    <string name="password_not_match_validation">password not match</string>
    <string name="correct_email_validation">Please enter correct email address to continue</string>
    <string name="out_station">Out Station</string>
    <string name="mini">Mini</string>
    <string name="seduen">Sedan</string>
    <string name="suv">SUV</string>
    <string name="from_address_validation">Please enter Source Address</string>
    <string name="to_address_validation">Please enter Destination Address</string>
    <string name="vehicle_validation">Please select Vehicle type</string>
    <string name="process_job_title">Processing Your Ride Request</string>
    <string name="cancel">Cancel</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="driver_details">Driver Details</string>
    <string name="base_fare">Base Fare</string>
    <string name="total_time">Total Time</string>
    <string name="waiting_amount">Waiting Amount</string>
    <string name="service_tax">Service Tax</string>
    <string name="total_amount">Total Amount</string>
    <string name="distance">Distance</string>
    <string name="server_exception">something went wrong please try again...</string>
    <string name="ride_details">Ride Detail</string>
    <string name="please_enter_your_otp_below">Please enter your otp below</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="verification">Verification</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="give_us_your_feedback">Give Us your Ratings</string>
    <string name="submit">Submit</string>
    <string name="driver_search">Searching your near by driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="driver_denied_duty">Driver denied duty</string>
    <string name="i_expected_a_shorter_wait_time">I expected a shorter wait time</string>
    <string name="changed_my_mind">Changed my mind</string>
    <string name="booked_another_ride">Booked another ride</string>
    <string name="others">Others</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="lelo_money">Lelo Money</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="approx_distance">Approx Distance</string>
    <string name="approx">(Approx)</string>
    <string name="cin_number_u63013rj2017ptc057202">CIN Number U63013RJ2017PTC057202</string>
    <string name="pan_number_aadcl2331f">Pan number AADCL2331F</string>
    <string name="service_tax_number_aadcl2331fsd001">Service tax number AADCL2331FSD001</string>
    <string name="wallet_payment">Wallet Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="destination_address_validation">Please re-enter your destination address</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
</resources>
