<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="homeFragment"
            type="com.lelocab.home.HomeFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_cars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5dp">


            <RadioButton
                android:id="@+id/rb_outstation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/mini_button_selector"
                android:gravity="center"
                android:text="@string/out_station"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/car_text_selector"
                android:visibility="gone" />


            <RadioButton
                android:id="@+id/rb_mini"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/mini_button_selector"
                android:gravity="center"
                android:text="@string/mini"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/car_text_selector" />


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/rb_seduen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/sedan_button_selector"
                android:gravity="center"
                android:text="@string/seduen"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/car_text_selector" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <RadioButton
                android:id="@+id/rb_suv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/suv_button_selector"
                android:gravity="center"
                android:text="@string/suv"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/car_text_selector" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@android:color/black"
            android:clickable="true"
            android:onClick="@{homeFragment.onBookNowClick}"
            android:text="@string/book_now"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>
</layout>