<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="CancelRideDataBinding">

        <variable
            name="dto"
            type="com.lelocab.cancelride.CancelRideRequestModel" />
    </data>
    <!-- public enum RideCancelReason
     {
     [Display(Name = "Driver is late")]
     DriverLate = 1,
     [Display(Name = "Driver denied duty")]
     DriverDeniedDuty = 2,
     [Display(Name = "I expected a shorter wait time")]
     ExpectedShorterWaitTime = 3,
     [Display(Name = "Changed my mind")]
     ChangedMind = 4,
     [Display(Name = "Booked another ride")]
     BookedAnother = 5,
     [Display(Name = "Others")]
     Others = 6
     }-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16dp">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/driver_is_late" />

                    <RadioButton
                        android:id="@+id/rb_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/driver_denied_duty" />

                    <RadioButton
                        android:id="@+id/rb_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/i_expected_a_shorter_wait_time" />

                    <RadioButton
                        android:id="@+id/rb_four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/changed_my_mind" />

                    <RadioButton
                        android:id="@+id/rb_five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/booked_another_ride" />

                    <RadioButton
                        android:id="@+id/rb_six"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/others" />
                </RadioGroup>

                <EditText
                    android:id="@+id/ed_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:background="@drawable/edittext_shape"
                    android:gravity="start"
                    android:minHeight="80dp"
                    android:text="@={dto.cancelReasonOther}"
                    android:visibility="gone" />

                <Button
                    style="@style/submit_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:onClick="onClickSubmit" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>